bindings/unity/Runtime/Native/xybrid.h

/*
 Opaque handle to a model loader.

 This handle is created by `xybrid_model_loader_from_registry`,
 `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`
 and must be freed with `xybrid_model_loader_free`.
 */
typedef struct XybridModelLoaderHandle {
  void *_0;
} XybridModelLoaderHandle;
/*
 Opaque handle to a loaded model.

 This handle is created by `xybrid_model_loader_load` and must be
 freed with `xybrid_model_free`.
 */
typedef struct XybridModelHandle {
  void *_0;
} XybridModelHandle;
/*
 Opaque handle to an envelope (input data).

 This handle is created by `xybrid_envelope_audio` or `xybrid_envelope_text`
 and must be freed with `xybrid_envelope_free`.
 */
typedef struct XybridEnvelopeHandle {
  void *_0;
} XybridEnvelopeHandle;
/*
 Opaque handle to a generation config.

 This handle is created by `xybrid_generation_config_new` (or a preset
 like `xybrid_generation_config_greedy`) and must be freed with
 `xybrid_generation_config_free`.
 */
typedef struct XybridGenerationConfigHandle {
  void *_0;
} XybridGenerationConfigHandle;
/*
 Opaque handle to an inference result.

 This handle is created by `xybrid_model_run` and must be freed with
 `xybrid_result_free`.
 */
typedef struct XybridResultHandle {
  void *_0;
} XybridResultHandle;
/*
 Initialize the xybrid library.

 This function should be called once before using any other xybrid functions.
 Currently this is a no-op but may perform initialization in the future.

 # Returns

 - `0` on success
 - Non-zero on failure (check `xybrid_last_error()` for details)

 # Example (C)

 ```c
 if (xybrid_init() != 0) {
     const char* error = xybrid_last_error();
     fprintf(stderr, "Failed to initialize: %s\n", error);
     return 1;
 }
 ```
 */
int32_t xybrid_init(void);
/*
 Get the library version string.

 Returns a pointer to a null-terminated string containing the library version.
 The returned pointer is valid for the lifetime of the library and should NOT
 be freed by the caller.

 # Returns

 A pointer to a static null-terminated version string, or null on error.

 # Example (C)

 ```c
 const char* version = xybrid_version();
 printf("xybrid version: %s\n", version);
 ```
 */
const char *xybrid_version(void);
/*
 Get the last error message.

 Returns a pointer to a null-terminated string containing the last error
 message, or null if no error has occurred. The returned pointer is valid
 until the next xybrid function call on the same thread.

 # Returns

 A pointer to the last error message, or null if no error.

 # Example (C)

 ```c
 XybridModelHandle* model = xybrid_model_loader_load(loader);
 if (model == NULL) {
     const char* error = xybrid_last_error();
     fprintf(stderr, "Failed to load: %s\n", error ? error : "unknown error");
 }
 ```
 */
const char *xybrid_last_error(void);
/*
 Free a string allocated by the library.

 This function should be called to free strings returned by xybrid functions
 that specify the caller must free the result. Do NOT use this to free
 strings returned by `xybrid_version()` or `xybrid_last_error()`.

 # Safety

 The pointer must be a valid pointer to a string allocated by xybrid,
 or null. Passing an invalid pointer causes undefined behavior.

 # Example (C)

 ```c
 char* model_id = xybrid_model_id(model);
 printf("Model: %s\n", model_id);
 xybrid_free_string(model_id);
 ```
 */
void xybrid_free_string(char *s);
/*
 Create a model loader from a registry model ID.

 This creates a loader that will fetch the model from the xybrid registry
 when `xybrid_model_loader_load` is called.

 # Parameters

 - `model_id`: A null-terminated string containing the model ID (e.g., "kokoro-82m").

 # Returns

 A handle to the model loader, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelLoaderHandle* loader = xybrid_model_loader_from_registry("kokoro-82m");
 if (loader == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use loader...
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelLoaderHandle *xybrid_model_loader_from_registry(const char *model_id);
/*
 Create a model loader from a local bundle path.

 This creates a loader that will load the model from the specified local path
 when `xybrid_model_loader_load` is called.

 # Parameters

 - `path`: A null-terminated string containing the path to the model bundle.

 # Returns

 A handle to the model loader, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelLoaderHandle* loader = xybrid_model_loader_from_bundle("/path/to/model");
 if (loader == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use loader...
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelLoaderHandle *xybrid_model_loader_from_bundle(const char *path);
/*
 Load a model using the loader.

 This function loads the model from the registry, local bundle, or directory,
 depending on how the loader was created.

 # Parameters

 - `handle`: A handle to the model loader created by `xybrid_model_loader_from_registry`,
   `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`.

 # Returns

 A handle to the loaded model, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelHandle* model = xybrid_model_loader_load(loader);
 if (model == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     xybrid_model_loader_free(loader);
     return 1;
 }
 // Use model...
 xybrid_model_free(model);
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelHandle *xybrid_model_loader_load(struct XybridModelLoaderHandle *handle);
/*
 Free a model loader handle.

 This function frees the memory associated with a model loader handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the model loader to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_model_loader_free(loader);
 loader = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_model_loader_free(struct XybridModelLoaderHandle *handle);
 XybridEnvelopeHandle* envelope = xybrid_envelope_audio(
     audio_data, sizeof(audio_data), 16000, 1);
 // Use envelope...
 xybrid_envelope_free(envelope);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_audio(const uint8_t *bytes,
                                                   uintptr_t len,
                                                   uint32_t sample_rate,
                                                   uint32_t channels);
/*
 Create an envelope containing text data.

 This function creates an envelope containing text for TTS or LLM inference.

 # Parameters

 - `text`: A null-terminated string containing the text. Must not be null.

 # Returns

 A handle to the envelope, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridEnvelopeHandle* envelope = xybrid_envelope_text("Hello, world!");
 if (envelope == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use envelope...
 xybrid_envelope_free(envelope);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_text(const char *text);
/*
 Free an envelope handle.

 This function frees the memory associated with an envelope handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the envelope to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_envelope_free(envelope);
 envelope = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_envelope_free(struct XybridEnvelopeHandle *handle);
/*
 Run inference on a model with the given input envelope.

 This function executes inference using the loaded model and returns
 a result handle containing the output or error information.

 # Parameters

 - `model`: A handle to the loaded model (from `xybrid_model_loader_load`).
 - `envelope`: A handle to the input envelope (from `xybrid_envelope_audio` or `xybrid_envelope_text`).

 # Returns

 A handle to the result, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.
 The envelope is NOT consumed - it can be reused for multiple inferences.

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 if (result == NULL) {
     fprintf(stderr, "Inference failed: %s\n", xybrid_last_error());
     return 1;
 }

 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     printf("Result: %s\n", text);
 } else {
     const char* error = xybrid_result_error(result);
     printf("Error: %s\n", error);
 }

 xybrid_result_free(result);
 ```
 */
struct XybridResultHandle *xybrid_model_run(struct XybridModelHandle *model,
                                            struct XybridEnvelopeHandle *envelope,
                                            struct XybridGenerationConfigHandle *config);
/*
 Get the model ID of a loaded model.

 Returns a pointer to a null-terminated string containing the model ID.
 The caller is responsible for freeing the returned string using
 `xybrid_free_string()`.

 # Parameters

 - `model`: A handle to the loaded model.

 # Returns

 A pointer to a null-terminated string containing the model ID,
 or null on failure. The caller must free this string with `xybrid_free_string()`.

 # Example (C)

 ```c
 char* model_id = xybrid_model_id(model);
 if (model_id != NULL) {
     printf("Model ID: %s\n", model_id);
     xybrid_free_string(model_id);
 }
 ```
 */
char *xybrid_model_id(struct XybridModelHandle *model);
/*
 Free a model handle.

 This function frees the memory associated with a model handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the model to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_model_free(model);
 model = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_model_free(struct XybridModelHandle *handle);
/*
 Check if the inference was successful.

 Returns 1 if the inference succeeded, 0 if it failed.
 If the handle is null or invalid, returns 0.

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 - `1` if success is true
 - `0` if success is false, or if the handle is null/invalid

 # Example (C)

 ```c
 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     printf("Result: %s\n", text);
 } else {
     const char* error = xybrid_result_error(result);
     printf("Error: %s\n", error ? error : "unknown");
 }
 ```
 */
int32_t xybrid_result_success(struct XybridResultHandle *result);
/*
 Get the error message from a failed inference.

 Returns a pointer to a null-terminated string containing the error message,
 or null if there was no error. The returned pointer is valid for the
 lifetime of the result handle - do NOT free it with xybrid_free_string().

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 A pointer to the error message string, or null if no error.
 The pointer is valid until the result handle is freed.

 # Example (C)

 ```c
 if (!xybrid_result_success(result)) {
     const char* error = xybrid_result_error(result);
     fprintf(stderr, "Inference failed: %s\n", error ? error : "unknown error");
 }
 ```
 */
const char *xybrid_result_error(struct XybridResultHandle *result);
/*
 Get the text output from an inference result.

 Returns a pointer to a null-terminated string containing the text output,
 or null if the result does not contain text. The returned pointer is valid
 for the lifetime of the result handle - do NOT free it with xybrid_free_string().

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 A pointer to the text output string, or null if no text output.
 The pointer is valid until the result handle is freed.

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     if (text != NULL) {
         printf("Transcription: %s\n", text);
     }
 }
 xybrid_result_free(result);
 ```
 */
const char *xybrid_result_text(struct XybridResultHandle *result);
/*
 Get the latency in milliseconds from an inference result.

 Returns the inference latency in milliseconds.
 If the handle is null or invalid, returns 0.

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 The inference latency in milliseconds, or 0 if the handle is null/invalid.

 # Example (C)

 ```c
 uint32_t latency = xybrid_result_latency_ms(result);
 printf("Inference took %u ms\n", latency);
 ```
 */
uint32_t xybrid_result_latency_ms(struct XybridResultHandle *result);
/*
 Free an inference result handle.

 This function frees the memory associated with an inference result handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the result to free. May be null (no-op).

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 // ... use result ...
 xybrid_result_free(result);
 result = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_result_free(struct XybridResultHandle *handle);